Fixed z-indexes and added title.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,8 +37,3 @@ nav {
   top: 1.5rem;
   color: #d39e00;
 }
-
-
-.search-title {
-  color: grey;
-}
