--- a/app/assets/stylesheets/result.scss
+++ b/app/assets/stylesheets/result.scss
@@ -14,8 +14,7 @@
     -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
     -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
     box-shadow: 0 4px 6px rgba(0,0,0,.3);
-    z-index: 0;
-    position: relative;
+    z-index: -2;
     overflow: hidden;
     min-width: 280px;
 
